# mpel2

./: .clang-format  CMakeLists.txt
demo/: CMakeLists.txt  assembling_planners.cpp
include/mpel/: builtins.hpp  core.hpp  logger.hpp  visualization.hpp
include/mpel/builtins/: graph_builders.hpp  graph_searches.hpp  interpolators.hpp
include/mpel/core/: graph_builder.hpp  graph_search.hpp  interpolator.hpp  planner.hpp
include/mpel/core/primitives/: graph.hpp  path.hpp  point.hpp  problem_definition.hpp  workspace.hpp
include/mpel/visualization/: canvas.hpp  opencv_support.hpp
src/builtins/graph_builders/: none.cpp
src/builtins/graph_search/: none.cpp
src/builtins/interpolators/: none.cpp  potential_field.cpp
src/core/: interpolator.cpp  planner.cpp
src/core/primitives/: graph.cpp  path.cpp  point.cpp  problem_definition.cpp  workspace.cpp
src/visualization/: canvas.cpp  opencv_support.cpp
